--- a/RWDF_L2_Start/index.html
+++ b/RWDF_L2_Start/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewports" content="width=device-width, initial-scale=1.0">
     <title>Brighton Times</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
 
@@ -16,6 +17,9 @@
         <h1 class="header__title">
           The Brighton Times
         </h1>
+        <a id="menu"> <i class="fa fa-bars fa-3x" aria-hidden="true"></i> </a>
+        <!-- <i class="fa fa-bars fa-3x" aria-hidden="true"></i> -->
+
       </div>
     </header>
 
@@ -178,5 +182,7 @@
         </ul>
       </footer>
     </main>
+
+    <script type="text/javascript" src="js/app.js"> </script>
   </body>
 </html>
