make btn larger

--- a/RWDF_L2_Start/index.html
+++ b/RWDF_L2_Start/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
   </head>
   <body>
 
@@ -25,10 +26,10 @@
 
     <nav id="drawer" class="nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#">News</a></li>
-        <li class="nav__item"><a href="#">Events</a></li>
-        <li class="nav__item"><a href="#">Culture</a></li>
-        <li class="nav__item"><a href="#">Blog</a></li>
+        <li class="nav__item"><a class="btn-lg" href="#">News</a></li>
+        <li class="nav__item"><a class="btn-lg" href="#">Events</a></li>
+        <li class="nav__item"><a class="btn-lg" href="#">Culture</a></li>
+        <li class="nav__item"><a class="btn-lg" href="#">Blog</a></li>
       </ul>
     </nav>
 
@@ -176,9 +177,9 @@
       </section>
       <footer>
         <ul>
-          <li><a href="#">Contact us</a></li>
-          <li><a href="#">Follow us on Twitter</a></li>
-          <li><a href="#">RSS</a></li>
+          <li><a class="btn-lg" href="#">Contact us</a></li>
+          <li><a class="btn-lg" href="#">Follow us on Twitter</a></li>
+          <li><a class="btn-lg" href="#">RSS</a></li>
         </ul>
       </footer>
     </main>
