video and canvas

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -10,6 +10,9 @@
     </style>
   </head>
   <body>
+    <video src="index (3).mp4" controls poster="poster.jpg">
+
+    </video>
     <canvas id="canvas" width="300" height="300"></canvas>
 
     <script type="text/javascript" src="app.js"> </script>
