--- a/web-worker/index.html
+++ b/web-worker/index.html
@@ -2,13 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Simple Web Worker</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Web Worker</h1>
-    <input id="first" type="text" name="" value="">
-    <input id="second" type="text" name="" value="">
-    <p class="result">Result: 0</p>
+    <h1>Web<br>Workers<br>basic<br>example</h1>
+    <div class="controls" tabindex="0">
+      <form class="" action="index.html" method="post">
+        <div class="">
+          <label for="first">Multiply number 1:</label>
+          <input id="first" type="text" name="" value="0">
+        </div>
+        <div class="">
+          <label for="second">Multiply number 2:</label>
+          <input id="second" type="text" name="" value="0">
+        </div>
+      </form>
+      <p class="result">Result: 0</p>
+
+    </div>
 
     <script type="text/javascript" src='main.js'> </script>
   </body>
