--- a/canvas/index.html
+++ b/canvas/index.html
@@ -6,11 +6,12 @@
     <style media="screen">
       canvas {
         border: 1px solid #000;
+        margin: 10px 20px;
       }
     </style>
   </head>
   <body>
-    <video src="index (3).mp4" controls poster="poster.jpg">
+    <!-- <video src="index (3).mp4" controls poster="poster.jpg"> -->
 
     </video>
     <canvas id="canvas" width="300" height="300"></canvas>
