--- a/GoogleAPI/index.html
+++ b/GoogleAPI/index.html
@@ -20,7 +20,7 @@
    <div class="staticMap">
    </div>
 
-   <script asyn defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo&libraries=drawing,geometry&callback=initMap" ></script>
+   <script asyn defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo&libraries=drawing,geometry&callback=initMap2" ></script>
    <script type="text/javascript" src='app.js'> </script>
  </body>
 </html>
